--- a/src/output.css
+++ b/src/output.css
@@ -554,112 +554,36 @@ video {
   display: none;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[100px\] {
-  top: 100px;
-}
-
-.top-\[400px\] {
-  top: 400px;
-}
-
-.top-\[00px\] {
-  top: 00px;
-}
-
-.left-44 {
-  left: 11rem;
-}
-
-.bottom-11 {
-  bottom: 2.75rem;
-}
-
-.bottom-\[\] {
-  bottom: ;
-}
-
-.bottom-\[200px\] {
-  bottom: 200px;
-}
-
-.bottom-\[700px\] {
-  bottom: 700px;
 }
 
 .bottom-\[100px\] {
   bottom: 100px;
 }
 
-.m-\[\] {
-  margin: ;
+.m-auto {
+  margin: auto;
 }
 
-.mt-\[\] {
-  margin-top: ;
-}
-
-.mt-\[40px\] {
-  margin-top: 40px;
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .mb-5 {
   margin-bottom: 1.25rem;
 }
 
-.mt-\[20px\] {
-  margin-top: 20px;
-}
-
-.mb-\[\] {
-  margin-bottom: ;
-}
-
-.mb-\[20p-x\] {
-  margin-bottom: 20p-x;
-}
-
 .mb-\[20px\] {
   margin-bottom: 20px;
 }
 
-.mt-\[30px\] {
-  margin-top: 30px;
-}
-
-.mt-\[50px\] {
-  margin-top: 50px;
+.mb-\[30px\] {
+  margin-bottom: 30px;
 }
 
 .mb-\[50px\] {
   margin-bottom: 50px;
-}
-
-.ml-\[\] {
-  margin-left: ;
-}
-
-.ml-\[50px\] {
-  margin-left: 50px;
-}
-
-.ml-\[80px\] {
-  margin-left: 80px;
 }
 
 .ml-2 {
@@ -670,16 +594,20 @@ video {
   margin-right: 0.5rem;
 }
 
-.mb-\[30px\] {
-  margin-bottom: 30px;
-}
-
 .mt-12 {
   margin-top: 3rem;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.mt-\[20px\] {
+  margin-top: 20px;
+}
+
+.mt-\[40px\] {
+  margin-top: 40px;
+}
+
+.mt-\[50px\] {
+  margin-top: 50px;
 }
 
 .flex {
@@ -690,48 +618,12 @@ video {
   display: none;
 }
 
-.h-\[\] {
-  height: ;
-}
-
 .h-\[200px\] {
   height: 200px;
 }
 
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[150px\] {
-  height: 150px;
-}
-
-.h-\[300\] {
-  height: 300;
-}
-
 .h-\[300px\] {
   height: 300px;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[300px\] {
-  width: 300px;
-}
-
-.w-\[600px\] {
-  width: 600px;
-}
-
-.w-\[800px\] {
-  width: 800px;
-}
-
-.w-14 {
-  width: 3.5rem;
 }
 
 .w-\[150px\] {
@@ -742,16 +634,24 @@ video {
   width: 250px;
 }
 
+.w-\[300px\] {
+  width: 300px;
+}
+
+.w-\[350px\] {
+  width: 350px;
+}
+
+.max-w-\[1200px\] {
+  max-width: 1200px;
+}
+
 .flex-col {
   flex-direction: column;
 }
 
 .items-center {
   align-items: center;
-}
-
-.justify-center {
-  justify-content: center;
 }
 
 .justify-between {
@@ -762,12 +662,16 @@ video {
   justify-content: space-around;
 }
 
-.gap-3 {
-  gap: 0.75rem;
+.gap-14 {
+  gap: 3.5rem;
 }
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .gap-7 {
@@ -778,24 +682,8 @@ video {
   gap: 2.25rem;
 }
 
-.gap-5 {
-  gap: 1.25rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
-}
-
-.gap-14 {
-  gap: 3.5rem;
-}
-
 .gap-\[50px\] {
   gap: 50px;
-}
-
-.border {
-  border-width: 1px;
 }
 
 .border-\[1px\] {
@@ -811,69 +699,9 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
 }
 
-.border-\[\] {
-  border-color: ;
-}
-
 .bg-\[\#05394A\] {
   --tw-bg-opacity: 1;
   background-color: rgb(5 57 74 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
-}
-
-.bg-red-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 242 242 / var(--tw-bg-opacity, 1));
-}
-
-.bg-slate-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
-}
-
-.bg-transparent {
-  background-color: transparent;
-}
-
-.bg-rose-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 241 242 / var(--tw-bg-opacity, 1));
-}
-
-.bg-inherit {
-  background-color: inherit;
-}
-
-.bg-\[\#FFA63A\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 166 58 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[265A6A\] {
-  background-color: 265A6A;
-}
-
-.bg-\[\#265A6A\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 90 106 / var(--tw-bg-opacity, 1));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#08546C\] {
@@ -881,9 +709,14 @@ video {
   background-color: rgb(8 84 108 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\#FFA800\] {
+.bg-\[\#265A6A\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 168 0 / var(--tw-bg-opacity, 1));
+  background-color: rgb(38 90 106 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#FFA63A\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 166 58 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#FFF8EB\] {
@@ -891,76 +724,54 @@ video {
   background-color: rgb(255 248 235 / var(--tw-bg-opacity, 1));
 }
 
-.p-\[5px\] {
-  padding: 5px;
-}
-
-.p-\[20px\] {
-  padding: 20px;
-}
-
-.p-\[\] {
-  padding: ;
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .p-\[10px\] {
   padding: 10px;
 }
 
+.p-\[20px\] {
+  padding: 20px;
+}
+
 .p-\[50px\] {
   padding: 50px;
 }
 
-.pe-\[5px\] {
-  padding-inline-end: 5px;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
-}
-
-.pt-7 {
-  padding-top: 1.75rem;
-}
-
-.pl-\[30px\] {
-  padding-left: 30px;
-}
-
-.pt-\[\] {
-  padding-top: ;
-}
-
-.pt-\[50px\] {
-  padding-top: 50px;
-}
-
-.pb-\[\] {
-  padding-bottom: ;
-}
-
-.pb-\[50px\] {
-  padding-bottom: 50px;
-}
-
-.pb-14 {
-  padding-bottom: 3.5rem;
-}
-
-.pb-1 {
-  padding-bottom: 0.25rem;
+.p-\[5px\] {
+  padding: 5px;
 }
 
 .pb-16 {
   padding-bottom: 4rem;
 }
 
+.pb-\[50px\] {
+  padding-bottom: 50px;
+}
+
+.pl-\[30px\] {
+  padding-left: 30px;
+}
+
+.pt-7 {
+  padding-top: 1.75rem;
+}
+
+.pt-\[50px\] {
+  padding-top: 50px;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -973,37 +784,9 @@ video {
   line-height: 1.75rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\] {
-  color: ;
-}
-
 .text-\[\#08546C\] {
   --tw-text-opacity: 1;
   color: rgb(8 84 108 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\#\] {
-  color: #;
 }
 
 .text-\[\#FFA800\] {
@@ -1011,23 +794,17 @@ video {
   color: rgb(255 168 0 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
 @media (min-width: 1024px) {
-  .lg\:mt-\[\] {
-    margin-top: ;
-  }
-
-  .lg\:mt-\[-40px\] {
-    margin-top: -40px;
-  }
-
-  .lg\:ml-\[\] {
-    margin-left: ;
-  }
-
-  .lg\:ml-\[200px\] {
-    margin-left: 200px;
-  }
-
   .lg\:ml-\[100px\] {
     margin-left: 100px;
   }
@@ -1036,28 +813,16 @@ video {
     margin-left: 400px;
   }
 
-  .lg\:block {
-    display: block;
+  .lg\:mt-\[-40px\] {
+    margin-top: -40px;
   }
 
   .lg\:flex {
     display: flex;
   }
 
-  .lg\:hidden {
-    display: none;
-  }
-
   .lg\:h-\[150px\] {
     height: 150px;
-  }
-
-  .lg\:h-\[\] {
-    height: ;
-  }
-
-  .lg\:h-\[350px\] {
-    height: 350px;
   }
 
   .lg\:h-\[300px\] {
@@ -1068,28 +833,16 @@ video {
     height: 320px;
   }
 
-  .lg\:w-\[600px\] {
-    width: 600px;
-  }
-
-  .lg\:w-\[\] {
-    width: ;
+  .lg\:w-\[400px\] {
+    width: 400px;
   }
 
   .lg\:w-\[500px\] {
     width: 500px;
   }
 
-  .lg\:w-\[400xp\] {
-    width: 400xp;
-  }
-
-  .lg\:w-\[500xp\] {
-    width: 500xp;
-  }
-
-  .lg\:w-\[400px\] {
-    width: 400px;
+  .lg\:w-\[600px\] {
+    width: 600px;
   }
 
   .lg\:flex-row {
@@ -1116,13 +869,13 @@ video {
     justify-content: space-evenly;
   }
 
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
